yamlfiles/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gaurav-web-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gaurav-web-server
  template:
    metadata:
      labels:
        app: gaurav-web-server
    spec:
      containers:
      - name: gaurav-web-server
        image: mangwani/capstone:latestarm
        ports:
        - containerPort: 80
