yamlfiles/db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gaurav-postgres-db
spec:
  serviceName: "gaurav-postgres"
  replicas: 1
  selector:
    matchLabels:
      app: gaurav-postgres
  template:
    metadata:
      labels:
        app: gaurav-postgres
    spec:
      containers:
      - name: gaurav-postgres
        image: mangwani/k8sassignment:dbserverv10.0
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: gaurav-postgres-pvc-vol
          mountPath: /var/lib/postgresql/gaurav
  volumeClaimTemplates: []
  volumes:
    - name: gaurav-postgres-pvc-vol
      persistentVolumeClaim:
        claimName: gaurav-postgres-pvc
