yamlfiles/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: gaurav-service
  labels:
    app: gaurav-web-server
spec:
  selector:
    app: gaurav-web-server
  ports:
    - protocol: TCP
      port: 80            # The port exposed by the service
      targetPort: 80       # The port on the container to which the service forwards traffic
  type: LoadBalancer      # Type LoadBalancer will expose the service externally
