yamlfiles/ingress-svc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gaurav-ingress
spec:
  rules:
  - host: www.mangwani.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gaurav-service
            port:
              number: 80
